add auth service

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,16 +1,26 @@
 <ion-navbar *navbar>
-  <ion-title>
-    Home
-  </ion-title>
+    <ion-title *ngIf="!loggedIn()">
+        Login
+    </ion-title>
+    <ion-title *ngIf="loggedIn()">
+        Home
+    </ion-title>
 </ion-navbar>
-
-<ion-content class="home">
-  <ion-card>
-    <ion-card-header>
-      Card Header
-    </ion-card-header>
-    <ion-card-content>
-      Hello World
-    </ion-card-content>
-  </ion-card>
+<ion-content class="login" *ngIf="!loggedIn()">
+    <ion-list>
+        <ion-input stacked-label>
+            <ion-label>Username</ion-label>
+            <input type="text" [(ngModel)]="username">
+        </ion-input>
+        <ion-input stacked-label>
+            <ion-label>Password</ion-label>
+            <input type="text" [(ngModel)]="password">
+        </ion-input>
+        <button block (click)="login()">Login</button>
+    </ion-list>
+</ion-content>
+<ion-content class="home" *ngIf="loggedIn()">
+    <ion-list>
+        <ion-item *ngFor="#module of modules" (click)="viewModule(module)">{{module.label}}</ion-item>
+    </ion-list>
 </ion-content>
