--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -14,7 +14,7 @@
         </ion-input>
         <ion-input stacked-label>
             <ion-label>Password</ion-label>
-            <input type="text" [(ngModel)]="password">
+            <input type="password" [(ngModel)]="password">
         </ion-input>
         <button block (click)="login()">Login</button>
     </ion-list>
