--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu id="leftMenu" [content]="content" *ngIf="loggedIn()">
+<ion-menu id="leftMenu" [content]="content">
 
     <ion-toolbar>
         <ion-title>My vTiger</ion-title>
@@ -6,11 +6,8 @@
 
     <ion-content>
         <ion-list>
-            <button menuClose ion-item *ngFor="#p of pages" (click)="openPage(p)">
+            <button menuClose="leftMenu" ion-item *ngFor="#p of pages" (click)="openPage(p)">
             {{p.title}}
-            </button>
-            <button menuClose="leftMenu" ion-item (click)="logOut()" detail-none>
-            Logout
             </button>
         </ion-list>
     </ion-content>
