--- a/app/pages/record-detail/record-detail.html
+++ b/app/pages/record-detail/record-detail.html
@@ -1,5 +1,5 @@
 <ion-navbar *navbar>
-	<ion-title>Recordaaaa Detail</ion-title>
+	<ion-title>Record Detail</ion-title>
 </ion-navbar>
 <ion-content class="has-header record-detail">
 	<ion-list *ngFor="#block of blocks">
